@@ -182,6 +182,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - TypoScript             Jan-Philipp Halle
 - Unicon                 Matt Oates
 - Uno IDL                Cedric Bosdonnat
+- Vala                   Nicolas Joseph
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
 - Verilog                Günter Dannoritzer
